convert Float to jdk21 FFM api